--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-session": "^1.3.3",
     "ejs": "^2.6.1",
     "ent": "^2.2.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "socket.io": "^2.2.0"
   }
 }
